--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="BemKsBWKeMTDVWUajuCm8pRGm_FRnRKThGM4at7Np-A" />
+    <meta name="description" content="packaging (zipping) programs, binaries, files and other files into zip file format called release.zip">
+    <meta name="keywords" content="Binary, Executable file, exe, dll, package, packaging, zipping, formatting, format, ease, easy, cli, gui, windows, Linux, mac, .net framework, mono, alkindix">
     <title>Packager by AlkindiX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
